test/compile-fail/scope/use-global-glob/expected.txt
error: cannot glob-import without a scope
 --> top.rhdl:1:6
  |
1 | use ::*;
  |       ^ this would import all crates
